remove device_id_package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ dependencies:
   google_maps_flutter: ^2.1.9
   awesome_dialog: ^2.2.1
   expandable: ^5.0.1
-  device_info_plus: ^3.2.3
+  flutter_udid: ^2.0.1
   qr_code_scanner: ^1.0.1
   firebase_auth: ^4.7.1
   mqtt_client: ^9.8.1
